--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
@@ -18,6 +18,8 @@ add_executable(BHMI
   BHMI.cpp
   BHMI.h
   BHMI.ui
+  BucketsModel.h BucketsModel.cpp
+  Structures.h
 )
 
-target_link_libraries(BHMI PRIVATE Qt5::Widgets)
+target_link_libraries(BHMI PRIVATE Qt5::Widgets )
